syntax = "proto3";

package transactional_outbox.notification_service.grpc;

option csharp_namespace = "TransactionalOutbox.Grpc";

import "google/protobuf/timestamp.proto";

service NotificationService {
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse);
}

message GetUserNotificationsRequest {
  string user_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message GetUserNotificationsResponse {
  repeated Notification notifications = 1;

  message Notification {
    string id = 1;
    string order_id = 2;
    Type type = 3;
    google.protobuf.Timestamp created_at = 4;
  }
  
  enum Type {
    OrderCreated = 0;
  }
}
